fixed some css to make the usernames of users with long usernames to wrap

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -59,6 +59,7 @@ body {
   position: absolute;
   left: 85px;
   top: -6px;
+  overflow-wrap: break-word;
  }
 
 .user-image {
